@startuml
title Search Vocabulary Class Diagram (/api/words)
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide class circle
hide empty methods
hide empty fields
note top
Generated from mobile-add-vocabulary-from-search-sequence.puml.
Classes and members are populated from current repository source when a matching code type exists.
end note

class WordSearchRequest <<dto>> {
  \+ Q : stringNullable
  \+ Page : int
  \+ Limit : int
  \+ Cefr : stringNullable
  \+ TopicId : uintNullable
  \+ IsPhrase : boolNullable
}

class WordSummaryResponse <<dto>> {
  \+ WordId : uint
  \+ Word : string
  \+ Phonetic : stringNullable
  \+ Cefr : stringNullable
  \+ PrimaryMeaning : stringNullable
  \+ ImageUrl : stringNullable
}

class WordsController <<backend_controller>> {
  \- _wordService : IWordReadService
  --
  \+ Search(request: WordSearchRequest, cancellationToken: CancellationToken) : TaskOfIActionResult
}

class IWordReadService <<service_interface>> {
  \+ SearchAsync(query: WordSearchQuery, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfPagedCollectionOfWordSummary
  \+ GetByIdAsync(wordId: uint, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordDetail
  \+ GetDailyAsync(cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordDetail
}

class WordReadService <<service>> {
  \- _wordRepository : IWordReadRepository
  \- _wordSearchCache : IWordSearchCacheNullable
  \- _wordDetailCache : IWordDetailCacheNullable
  --
  \+ SearchAsync(query: WordSearchQuery, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfPagedCollectionOfWordSummary
}

class Word <<entity>> {
  \+ WordId : uint
  \+ Word1 : string
  \+ WordKey : string
  \+ CefrLevel : stringNullable
  \+ PhoneticUk : stringNullable
  \+ PhoneticUs : stringNullable
  \+ ImageUrl : stringNullable
  \+ IsPhrase : bool
  \+ Status : string
  \+ CreatedAt : DateTime
  \+ UpdatedAt : DateTime
  \+ AiGradingCaches : ICollectionOfAiGradingCache
}

class WordSense <<entity>> {
  \+ SenseId : uint
  \+ WordId : uint
  \+ SenseOrder : int
  \+ WordClass : string
  \+ EnglishDefinition : string
  \+ VietnameseMeaning : stringNullable
  \+ Status : string
  \+ TestAnswers : ICollectionOfTestAnswer
  \+ Word : Word
  \+ WordExamples : ICollectionOfWordExample
  \+ WordRelations : ICollectionOfWordRelation
}

class WordTopic <<entity>> {
  \+ WordId : uint
  \+ TopicId : uint
  \+ IsPrimary : bool
  \+ Topic : Topic
  \+ Word : Word
}

class IWordReadRepository <<repository_interface>> {
  \+ SearchAsync(normalizedQuery: stringNullable, page: int, limit: int, cefr: stringNullable, topicId: uintNullable, isPhrase: boolNullable, cancellationToken: CancellationToken) : TaskOfPagedCollectionOfWordSummary
  \+ FindDetailAsync(wordId: uint, cancellationToken: CancellationToken) : TaskOfWordDetailNullable
  \+ GetDailyCandidateWordIdsAsync(requirePlayableAudio: bool, cancellationToken: CancellationToken) : TaskOfIReadOnlyCollectionOfuint
}

class WordReadRepository <<repository>> {
  \- _dbContext : VocaNovaDbContext
  --
  \+ SearchAsync(normalizedQuery: stringNullable, page: int, limit: int, cefr: stringNullable, topicId: uintNullable, isPhrase: boolNullable, cancellationToken: CancellationToken) : TaskOfPagedCollectionOfWordSummary
}

class VocaNovaDbContext <<dbcontext>> {
  \+ AgeRanges : DbSetOfAgeRange
  \+ AiGradingCaches : DbSetOfAiGradingCache
  \+ AuditLogs : DbSetOfAuditLog
  \+ EducationLevels : DbSetOfEducationLevel
  \+ LearningPurposes : DbSetOfLearningPurpose
  \+ Occupations : DbSetOfOccupation
  \+ OtpVerifications : DbSetOfOtpVerification
  \+ RefreshTokens : DbSetOfRefreshToken
  \+ Regions : DbSetOfRegion
  \+ Roles : DbSetOfRole
  \+ TestAnswers : DbSetOfTestAnswer
  \+ TestSessions : DbSetOfTestSession
  --
  \+ SaveChangesAsync(cancellationToken: CancellationToken) : TaskOfInt
}

class MySQL_Database <<database>> {

}
WordsController ..> WordSearchRequest
WordReadRepository ..> VocaNovaDbContext
VocaNovaDbContext ..> MySQL_Database
WordsController ..> WordSummaryResponse
WordSearchRequest ..> WordsController
IWordReadService <|.. WordReadService
WordsController ..> IWordReadService : SearchAsync()
IWordReadRepository <|.. WordReadRepository
WordReadService ..> IWordReadRepository : SearchAsync()
WordReadRepository ..> Word
WordReadRepository ..> WordSense
WordReadRepository ..> WordTopic
@enduml
